Updated Application by fixing context grab and release in the creation stage. Updated Window by removing broken field. Updated ShaderProgram by supporting uploading boolean uniforms. Updated Mesh by renaming field. Updated Texture by removing unnecessary whitespace. Added rsc/shader directory. Added StandardShader